bluegreen-demo/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluegreen-demo-preview
  namespace: bluegreen-demo
spec:
  selector:
    app: bluegreen-demo
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
